# Automatic-code-review

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  run.ps1  sample_code.py  setup.py
code-review-assistant/: Dockerfile  README.md  requirements.txt  run.sh
code-review-assistant/.github/workflows/: ci.yml
code-review-assistant/src/: config.py  main_api.py  main_cli.py
code-review-assistant/src/api/: router.py  schemas.py
code-review-assistant/src/database/: models.py  repository.py
code-review-assistant/src/engine/: analyzer.py
code-review-assistant/src/services/: review_service.py
code-review-assistant/tests/: test_engine.py
scripts/: generator.py
src/: Aggregator.cpp  Aggregator.hpp  Database.cpp  Database.hpp  Parser.cpp  Parser.hpp  main.cpp
src/api/: dependencies.py
src/database/: connection.py
tests/: CMakeLists.txt  aggregator_tests.cpp  parser_tests.cpp  test_integration.py
